--- a/app/views/user_notifications/digest2.html.erb
+++ b/app/views/user_notifications/digest2.html.erb
@@ -290,10 +290,14 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 </table>
 
 <table style="background-color: #f3f3f3; width: 100%;">
-  <h1 class="text-center" style="font-size:34px;font-weight:400;line-height:1.3; padding: 60px 0 20px 0;text-align:center;">
-    Popular Posts
-  </h1>
-</center>
+  <tr>
+    <td>
+      <h1 class="text-center" style="font-size:34px;font-weight:400;line-height:1.3; padding: 60px 0 20px 0;text-align:center;">
+        Popular Posts
+      </h1>
+    </td>
+  </tr>
+</table>
 
 <table class="body" style="width:100%;background:#f3f3f3;border-spacing:0;border-collapse:collapse!important;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:200;line-height:1.3;padding:0;text-align:left;vertical-align:top;">
   <tr>
@@ -426,8 +430,6 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
       background: #f3f3f3
     }
   }
-
-
 
   @media only screen and (max-width:900px) {
     table.body img {
