--- a/app/views/user_notifications/digest2.html.erb
+++ b/app/views/user_notifications/digest2.html.erb
@@ -20,14 +20,14 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
   <img src="http://rewphus.github.io/assets/img/DiscourseLogo.png" style="-ms-interpolation-mode:bicubic;clear:both;display:block;height:40px;margin:auto;max-width:100%;outline:0;padding:30px;text-decoration:none;width:auto;">
 </header>
 
-<table class="body" style="width:100%;margin:0 auto;background:#f3f3f3;margin-top:30px;padding:0;border-spacing:0;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:200;line-height:1.3;text-align:left;vertical-align:top;">
+<table class="body" style="width:100%;background:#f3f3f3;margin-top:30px;padding:0;border-spacing:0;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:200;line-height:1.3;vertical-align:top;">
   <tr>
     <td class="side-spacer" style="width:5%;vertical-align:top;padding:0;">
       <div style="background-color:#2F70AC;">
-        <table class="spacer" style="border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
+        <table class="spacer" style="border-spacing:0;padding:0;width:100%">
           <tbody>
             <tr>
-              <td height="400px" style="height:400px;border-collapse:collapse!important;margin:0;mso-line-height-rule:exactly;padding:0;text-align:left;vertical-align:top;word-wrap:normal">&nbsp;</td>
+              <td height="400px" style="height:400px;border-collapse:collapse!important;margin:0;mso-line-height-rule:exactly;padding:0;">&nbsp;</td>
             </tr>
           </tbody>
         </table>
@@ -38,30 +38,29 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
         <tbody>
           <tr>
             <td style="border-collapse:collapse!important;color:#0a0a0a;line-height:1.3;margin:0;padding:0;text-align:left;vertical-align:top;word-wrap:normal">
-              <div style="color:#fff">
-                <table class="row" style="padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
+              <div>
+                <table class="row" style="padding:0;vertical-align:top;width:100%">
                   <tbody>
                     <tr>
-                      <!--  Since your last visit  -->
-                      <h3 class="text-center" style="color:#fff;font-size:28px;font-weight:400;margin:0;margin-bottom:10px;text-align:center;">
+                      <h3 class="text-center" style="color:#fff;font-size:28px;font-weight:400;margin:0 0 10px 0;text-align:center;">
                         Since your last visit
                       </h3>
                     </tr>
                   </tbody>
                 </table>
-                <table style="margin-bottom:20px;padding:0;position:relative;text-align:left;vertical-align:top;width:100%" class="row">
+                <table style="margin-bottom:20px;padding:0;text-align:left;vertical-align:top;width:100%" class="row">
                   <tbody>
                     <tr>
-                      <th class="large-offset-1 small-3 large-3 columns first" style="line-height:1.3;margin:0 auto;padding:0;padding-bottom:16px;padding-left:81px;padding-right:8px;text-align:left;width:179px">
-                        <table style="padding:0;text-align:left;vertical-align:top;width:100%">
+                      <th class="large-offset-1 small-3 large-3 columns first" style="margin:0;padding:0 8px 16px 81px;width:179px">
+                        <table style="padding:0;vertical-align:top;width:100%">
                           <tbody>
                             <tr>
-                              <th style="line-height:1.3;margin:0;padding:0;text-align:left">
+                              <th style="line-height:1.3;margin:0;padding:0;text-align:center">
                                 <!--  New Topics  -->
-                                <h1 class="text-center" style="color:#fff;font-size:3em;font-weight:400;line-height:1.3;margin:0;margin-bottom:0;padding:0;text-align:center;word-wrap:normal">
+                                <h1 class="text-center" style="color:#fff;font-size:3em;font-weight:400;line-height:1.3;margin:0;padding:0;text-align:center;word-wrap:normal">
                                   <strong>25</strong>
                                 </h1>
-                                <h4 class="text-center" style="color:#fff;font-size:16px;font-weight:400;line-height:1.3;margin:0;margin-bottom:10px;padding:0;text-align:center;word-wrap:normal">
+                                <h4 class="text-center" style="color:#fff;font-size:16px;font-weight:400;line-height:1.3;margin:0 0 10px 0;padding:0;text-align:center;word-wrap:normal">
                                   New<br>Topics
                                 </h4>
                               </th>
@@ -69,25 +68,21 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
                           </tbody>
                         </table>
                       </th>
-                      <th class="small-1 large-1 columns" style="color:#0a0a0a;line-height:1.3;margin:0 auto;padding:0;padding-bottom:16px;padding-left:8px;padding-right:8px;text-align:left;width:49px">
-                        <table style="padding:0;text-align:left;vertical-align:top;width:100%">
-                          <tbody>
-                            <tr>
-                              <th style="line-height:1.3;margin:0;padding:0;"></th>
-                            </tr>
-                          </tbody>
+                      <th class="small-1 large-1 columns" style="margin:0;padding:0 8px 16px 8px;width:49px">
+                        <table style="padding:0;width:100%">
+                          <tbody><tr><th style="margin:0;padding:0;"></th></tr></tbody>
                         </table>
                       </th>
-                      <th class="small-3 large-3 columns" style="line-height:1.3;margin:0 auto;padding:0;padding-bottom:16px;padding-left:8px;padding-right:8px;text-align:left;width:179px">
-                        <table style="padding:0;text-align:left;vertical-align:top;width:100%">
+                      <th class="small-3 large-3 columns" style="margin:0;padding:0 8px 16px 8px;width:179px">
+                        <table style="padding:0;vertical-align:top;width:100%">
                           <tbody>
                             <tr>
-                              <th style="line-height:1.3;margin:0;padding:0;">
+                              <th style="line-height:1.3;margin:0;padding:0;text-align:center;vertical-align:top;">
                                 <!--  Unread Messages  -->
-                                <h1 class="text-center" style="color:#fff;font-size:3em;font-weight:400;line-height:1.3;margin:0;margin-bottom:0;padding:0;text-align:center;word-wrap:normal">
+                                <h1 class="text-center" style="color:#fff;font-size:3em;font-weight:400;line-height:1.3;margin:0;padding:0;text-align:center;word-wrap:normal">
                                   <strong>2</strong>
                                 </h1>
-                                <h4 class="text-center" style="color:#fff;font-size:16px;font-weight:400;line-height:1.3;margin:0;margin-bottom:10px;padding:0;text-align:center;width:100%">
+                                <h4 class="text-center" style="color:#fff;font-size:16px;font-weight:400;line-height:1.3;margin:0 0 10px 0;padding:0;text-align:center;width:100%">
                                   Unread<br>Messages
                                 </h4>
                               </th>
@@ -95,25 +90,21 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
                           </tbody>
                         </table>
                       </th>
-                      <th class="small-1 large-1 columns" style="line-height:1.3;margin:0 auto;padding:0;padding-bottom:16px;padding-left:8px;padding-right:8px;text-align:left;width:49px">
-                        <table style="padding:0;text-align:left;vertical-align:top;width:100%">
-                          <tbody>
-                            <tr>
-                              <th style="line-height:1.3;margin:0;padding:0;"></th>
-                            </tr>
-                          </tbody>
+                      <th class="small-1 large-1 columns" style="margin:0;padding:0 8px 16px 8px;width:49px">
+                        <table style="padding:0;width:100%">
+                          <tbody><tr><th style="margin:0;padding:0;"></th></tr></tbody>
                         </table>
                       </th>
-                      <th class="small-3 large-3 columns" style="line-height:1.3;margin:0 auto;padding:0;padding-bottom:16px;padding-left:8px;padding-right:8px;text-align:left;width:179px">
-                        <table style="padding:0;text-align:left;vertical-align:top;width:100%">
+                      <th class="small-3 large-3 columns" style="margin:0;padding:0 8px 16px 8px;width:179px">
+                        <table style="padding:0;vertical-align:top;width:100%">
                           <tbody>
                             <tr>
-                              <th style="line-height:1.3;margin:0;padding:0;">
+                              <th style="line-height:1.3;margin:0;padding:0;text-align:center;">
                                 <!--  Unread Notifications  -->
-                                <h1 class="text-center" style="color:#fff;font-size:3em;font-weight:400;line-height:1.3;margin:0;margin-bottom:0;padding:0;text-align:center;word-wrap:normal">
+                                <h1 class="text-center" style="color:#fff;font-size:3em;font-weight:400;line-height:1.3;margin:0;padding:0;text-align:center;word-wrap:normal">
                                   <strong>10</strong>
                                 </h1>
-                                <h4 class="text-center" style="color:#fff;font-size:16px;font-weight:400;line-height:1.3;margin:0;margin-bottom:10px;padding:0;text-align:center;word-wrap:normal">
+                                <h4 class="text-center" style="color:#fff;font-size:16px;font-weight:400;line-height:1.3;margin:0 0 10px 0;padding:0;text-align:center;word-wrap:normal">
                                   Unread<br>Notifications
                                 </h4>
                               </th>
@@ -121,13 +112,9 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
                           </tbody>
                         </table>
                       </th>
-                      <th class="small-1 large-1 columns last" style="line-height:1.3;margin:0 auto;padding:0;padding-bottom:16px;padding-left:8px;padding-right:16px;width:49px">
+                      <th class="small-1 large-1 columns last" style="line-height:1.3;margin:0;padding:0 16px 16px 8px;width:49px">
                         <table style="padding:0;width:100%">
-                          <tbody>
-                            <tr>
-                              <th style="line-height:1.3;margin:0;padding:0;"></th>
-                            </tr>
-                          </tbody>
+                          <tbody><tr><th style="margin:0;padding:0;"></th></tr></tbody>
                         </table>
                       </th>
                     </tr>
@@ -277,10 +264,10 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
     <td class="side-spacer" style="width:5%;vertical-align:top;padding:0;">
       <!-- Blue background that goes down part-way behind content -->
       <div style="background-color:#2F70AC;">
-        <table class="spacer" style="border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
+        <table class="spacer" style="border-spacing:0;padding:0;width:100%">
           <tbody>
             <tr>
-              <td height="400px" style="height:400px;border-collapse:collapse!important;margin:0;mso-line-height-rule:exactly;padding:0;text-align:left;vertical-align:top;word-wrap:normal">&nbsp;</td>
+              <td height="400px" style="height:400px;border-collapse:collapse!important;margin:0;mso-line-height-rule:exactly;padding:0;">&nbsp;</td>
             </tr>
           </tbody>
         </table>
