--- a/app/views/user_notifications/digest2.html.erb
+++ b/app/views/user_notifications/digest2.html.erb
@@ -145,29 +145,20 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
               <table class="row" style="width:100%">
                 <tbody>
                   <tr>
-                    <th class="small-8 large-8 columns first" style="margin:0 auto;padding:0 8px 16px 16px;text-align:left;width:75%">
-                      <table style="padding:0;text-align:left;vertical-align:top;width:100%">
-                        <tr>
-                          <th style="margin:0;padding:0;text-align:left;">
-                            <p style="color:#8f8f8f;line-height:1.3;margin: 20px 0 10px 0;">
-                              meta
-                            </p>
-                          </th>
-                        </tr>
-                      </table>
+                    <th class="small-8 large-8 columns first" style="margin:0;padding:0 8px 16px 16px;text-align:left;vertical-align:top;width:75%">
+                      <p style="color:#8f8f8f;line-height:1.3;margin: 20px 0 10px 0;">
+                        meta
+                      </p>
                     </th>
-                    <th class="small-4 large-4 columns last" style="margin:0 auto;padding:0;padding: 0 16px 16px 8px;text-align:left;width:25%">
-                      <table style="padding:0;text-align:left;vertical-align:top;width:100%">
-                        <tr>
-                          <th style="margin:0;padding:0;text-align:right">
-                            <p class="text-right" style="color:#8f8f8f;line-height:1.3;margin:20px 0 10px 0;">June 13</p>
-                          </th>
-                        </tr>
-                      </table>
+                    <th class="small-4 large-4 columns last" style="margin:0;padding: 0 16px 16px 8px;text-align:right;vertical-align:top;width:25%">
+                      <p class="text-right" style="color:#8f8f8f;line-height:1.3;margin:20px 0 10px 0;">
+                        June 13
+                      </p>
                     </th>
                   </tr>
                 </tbody>
               </table>
+
               <table class="row" style="vertical-align:top;width:100%">
                 <tbody>
                   <tr>
@@ -178,34 +169,32 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
                         </a>
                       </h2>
                     </th>
-                    <th class="small-3 large-3 columns last" style="color:#0a0a0a;line-height:1.3;margin:0 auto;padding:0;padding-bottom:16px;padding-left:8px;padding-right:16px;text-align:left;width:20%">
-                      <center style="min-width:147px;width:100%">
-                        <img src="http://rewphus.github.io/assets/img/markdown.png" style="-ms-interpolation-mode:bicubic;clear:both;display:block;float:none;margin:auto;max-height:80px;max-width:100%;outline:0;text-align:center;text-decoration:none;width:auto" align="center" class="float-center">
-                      </center>
+                    <th class="small-3 large-3 columns last" style="color:#0a0a0a;line-height:1.3;margin:0;padding:0 16px 16px 8px;text-align:center;width:20%">
+                      <img src="http://rewphus.github.io/assets/img/markdown.png" style="-ms-interpolation-mode:bicubic;clear:both;display:block;float:none;margin:auto;max-height:80px;max-width:100%;outline:0;text-align:center;text-decoration:none;width:auto" align="center" class="float-center">
                     </th>
                   </tr>
                 </tbody>
               </table>
+
               <table class="row" style="padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
                 <tbody>
                   <tr>
-                    <th class="small-3 large-1 columns first" style="color:#0a0a0a;line-height:1.3;margin:0 auto;padding:0;padding-bottom:16px;padding-left:16px;padding-right:8px;text-align:left;width:10%">
-                      <center style="min-width:17px;width:100%">
-                        <img src="http://rewphus.github.io/assets/img/CodingHorror.png" style="-ms-interpolation-mode:bicubic;border-radius:50%;clear:both;display:block;float:none;height:50px;margin:0 auto;max-width:100%;outline:0;text-align:center;text-decoration:none;width:50px" align="center" class="float-center">
-                      </center>
+                    <th class="small-3 large-1 columns first" style="color:#0a0a0a;line-height:1.3;margin:0 auto;padding:0 8px 16px 16px;text-align:center;width:10%">
+                      <img src="http://rewphus.github.io/assets/img/CodingHorror.png" style="-ms-interpolation-mode:bicubic;border-radius:50%;clear:both;display:block;float:none;height:50px;width:50px;margin:0;max-width:100%;outline:0;text-align:center;text-decoration:none;" align="center" class="float-center">
                     </th>
                     <th class="small-9 large-10 columns last" style="color:#0a0a0a;padding:0 16px 16px 8px;text-align:left;width:90%">
                       <h6 style="color:inherit;font-size:18px;font-weight:400;line-height:1.3;margin:0;padding:0;word-wrap:normal;">Username</h6>
-                      <p style="color:#8f8f8f;line-height:1.3;margin:0;margin-bottom:10px;padding:0;">Full Name</p>
+                      <p style="color:#8f8f8f;line-height:1.3;margin:0 0 16px 0;padding:0;">Full Name</p>
                     </th>
                   </tr>
                 </tbody>
               </table>
-              <table style="border-bottom:1px solid #f3f3f3;padding:0;position:relative;text-align:left;vertical-align:top;width:100%" class="row">
+
+              <table style="border-bottom:1px solid #f3f3f3;padding:0;text-align:left;vertical-align:top;width:100%" class="row">
                 <tbody>
                   <tr>
                     <th class="small-12 large-12 columns first last" style="padding:0 16px 16px 16px;text-align:left;width:100%">
-                      <p style="color:#0a0a0a;line-height:1.3;margin:0;margin-bottom:10px;padding:0;font-weight:200;">
+                      <p style="color:#0a0a0a;line-height:1.3;margin:0 0 10px 0;padding:0;font-weight:200;">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Delectus velit eveniet est odit doloribus minus,
                         reprehenderit vitae excepturi numquam repellendus
@@ -217,7 +206,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
                 </tbody>
               </table>
 
-              <table class="row" style="padding:0;position:relative;text-align:left;vertical-align:top;width:100%; margin-top:20px;">
+              <table class="row" style="padding:0;text-align:left;vertical-align:top;width:100%; margin-top:20px;">
                 <tbody>
                   <tr style="vertical-align:top;">
                     <th class="small-3 large-1 columns first" style="padding:0 8px 16px 16px;text-align:left;width:10%">
@@ -246,11 +235,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
               </table>
               <div style="background-color:#f3f3f3;">
                 <table class="spacer" style="padding:0;width:100%">
-                  <tbody>
-                    <tr>
-                      <td height="20px" style="border-collapse:collapse!important;line-height:20px;margin:0;mso-line-height-rule:exactly;padding:0;">&#xA0;</td>
-                    </tr>
-                  </tbody>
+                  <tbody><tr><td height="20px" style="border-collapse:collapse!important;line-height:20px;margin:0;mso-line-height-rule:exactly;padding:0;">&#xA0;</td></tr></tbody>
                 </table>
               </div>
               <!--   End of Popular Topic   -->
@@ -298,7 +283,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
               <table class="row" style="width:100%;background:#fefefe;border-spacing:0;padding:0;text-align:left;vertical-align:top;">
                 <tbody>
                   <tr>
-                    <td class="small-12 large-12 columns first last" style="color:#0a0a0a;line-height:1.3;margin:0 auto;padding:16px;text-align:left;width:764px">
+                    <td class="small-12 large-12 columns first last" style="margin:0 auto;padding:16px;text-align:left;width:764px">
                       <p style="color:#0a0a0a;line-height:1.3;margin:0;margin-bottom:10px;padding:0;text-align:left; font-weight:200;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Delectus velit eveniet est odit doloribus minus,
                         reprehenderit vitae excepturi numquam repellendus
@@ -309,6 +294,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
                   </tr>
                 </tbody>
               </table>
+
               <table style="border-spacing:0;background-color:#f3f3f3;padding:0;position:relative;text-align:left;vertical-align:top;width:100%" class="row">
                 <tbody>
                   <tr>
@@ -318,6 +304,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
                   </tr>
                 </tbody>
               </table>
+
               <table style="background-color:#f3f3f3;padding:0;position:relative;text-align:left;vertical-align:top;width:100%" class="row">
                 <tbody>
                   <tr>
@@ -341,6 +328,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
                   </tr>
                 </tbody>
               </table>
+
               <div style="background-color:#f3f3f3">
                 <table class="spacer" style="padding:0;text-align:left;vertical-align:top;width:100%">
                   <tbody>
