--- a/app/views/user_notifications/digest.html.erb
+++ b/app/views/user_notifications/digest.html.erb
@@ -235,9 +235,11 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
         <% end %>
       </th>
       <th class="small-4 large-3 columns" style="padding:0 8px 16px 8px;text-align:left;width:30%">
+<!-- TODO
         <a href="<%= Discourse.base_url_no_prefix + t.relative_url %>" style="color:#2199e8;float:right;font-weight:400;line-height:1.3;margin:0;padding:0;text-align:left;text-decoration:none">
           <%=t 'user_notifications.digest.follow_topic' %>
         </a>
+-->
       </th>
       <th class="small-8 large-4 columns last" style="line-height:1.3;padding:0 16px 0 8px;text-align:right;width:30%">
         <a href="<%= Discourse.base_url_no_prefix + t.relative_url %>" style="width:100%;background-color:#2199e8;color:#fff;text-decoration:none;padding:8px 16px;white-space: nowrap;">
