--- a/app/views/user_notifications/digest.html.erb
+++ b/app/views/user_notifications/digest.html.erb
@@ -18,17 +18,17 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
   <%= @preheader_text %>
 </span>
 
-<header style="background-color:#<%= @header_bgcolor -%>;">
-  <a href="<%= Discourse.base_url %>" style='color:#<%= @header_color -%>;'>
+<header style="background-color:#<%= @header_bgcolor -%>;padding:30px;">
+  <a href="<%= Discourse.base_url %>" style='color:#<%= @header_color -%>;font-size:28px;'>
   <%- if logo_url.blank? %>
-    <%= SiteSetting.title %>
+    <center><%= SiteSetting.title %></center>
   <%- else %>
-    <img src="<%= logo_url %>" style="-ms-interpolation-mode:bicubic;clear:both;display:block;height:40px;margin:auto;max-width:100%;outline:0;padding:30px;text-decoration:none;width:auto;" alt="<%= SiteSetting.title %>">
+    <img src="<%= logo_url %>" style="-ms-interpolation-mode:bicubic;clear:both;display:block;height:40px;margin:auto;max-width:100%;outline:0;text-decoration:none;width:auto;" alt="<%= SiteSetting.title %>">
   <%- end %>
   </a>
 </header>
 
-<table class="body" style="width:100%;background:#f3f3f3;margin-top:30px;padding:0;border-spacing:0;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:200;line-height:1.3;vertical-align:top;">
+<table class="body" style="width:100%;background:#f3f3f3;padding:0;border-spacing:0;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:200;line-height:1.3;vertical-align:top;">
   <tr>
     <td class="side-spacer" style="width:5%;vertical-align:top;padding:0;">
       <div style="background-color:#2F70AC;">
@@ -48,12 +48,14 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
             <td style="border-collapse:collapse!important;color:#0a0a0a;line-height:1.3;margin:0;padding:0;text-align:left;vertical-align:top;word-wrap:normal">
               <div>
 
-<table class="row" style="padding:0;vertical-align:top;width:100%">
+<table class="row" style="padding:0;vertical-align:top;width:100%;border-spacing:0;">
   <tbody>
     <tr>
-      <h3 class="text-center" style="color:#fff;font-size:28px;font-weight:400;margin:0 0 10px 0;text-align:center;">
-        <%=t 'user_notifications.digest.since_last_visit' %>
-      </h3>
+      <td style="padding: 10px 0 0 0;">
+        <h3 class="text-center" style="color:#fff;font-size:28px;font-weight:400;margin:0 0 10px 0;text-align:center;border-collapse:collapse!important;">
+          <%=t 'user_notifications.digest.since_last_visit' %>
+        </h3>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -208,7 +210,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
     <tr>
       <th class="small-12 large-12 columns first last" style="padding:0 16px 16px 16px;text-align:left;width:100%;font-weight:normal;">
         <p style="color:#0a0a0a;line-height:1.3;margin:0 0 10px 0;padding:0;font-weight:200;">
-          <%= email_excerpt(t.first_post.cooked, t.posts_count) %>
+          <%= email_excerpt(t.first_post.cooked) %>
         </p>
       </th>
     </tr>
