--- a/app/views/user_notifications/digest.html.erb
+++ b/app/views/user_notifications/digest.html.erb
@@ -96,16 +96,16 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <table style="width:100%">
   <tbody>
     <tr>
-      <th style="margin:0;padding:0 8px 16px 16px;text-align:left;vertical-align:top;width:75%">
+      <td style="margin:0;padding:0 8px 16px 16px;text-align:left;vertical-align:top;width:75%">
         <p style="color:#8f8f8f;line-height:1.3;margin: 20px 0 10px 0;">
           <%= category_badge(t.category, inline_style: true, absolute_url: true) %>
         </p>
-      </th>
-      <th style="margin:0;padding: 0 16px 16px 8px;text-align:right;vertical-align:top;width:25%">
-        <p class="text-right" style="color:#8f8f8f;line-height:1.3;margin:20px 0 10px 0;">
+      </td>
+      <td style="margin:0;padding: 0 16px 16px 8px;text-align:right;vertical-align:top;width:25%">
+        <p class="text-right" style="color:#8f8f8f;line-height:1.3;margin:20px 0 10px 0;font-weight:400;">
           <%= short_date(t.created_at) %>
         </p>
-      </th>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -113,18 +113,20 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <table style="vertical-align:top;width:100%">
   <tbody>
     <tr>
-      <th style="padding: 0 8px 8px 16px; text-align:left; width:80%;">
+      <td style="padding: 0 8px 8px 16px; text-align:left; width: <%= t.image_url.present? ? "80%" : "100%" -%>;">
         <h2 style="font-size:24px;font-weight:400;line-height:1.3;margin:0 0 10px 0;padding:0;word-wrap:normal">
           <a href="<%= Discourse.base_url_no_prefix + t.relative_url %>" style="color:#2F70AC;font-weight:400;line-height:1.3;margin:0;padding:0;text-decoration:none">
             <strong><%= t.title -%></strong>
           </a>
         </h2>
-      </th>
-      <th style="color:#0a0a0a;line-height:1.3;margin:0;padding:0 16px 8px 8px;text-align:center;width:20%">
-        <% if t.image_url.present? %>
-          <img src="<%= Discourse.base_url_no_prefix + t.image_url -%>" style="-ms-interpolation-mode:bicubic;clear:both;display:block;float:none;margin:auto;max-height:64px;max-width:100%;outline:0;text-align:center;text-decoration:none;" align="center">
-        <% end %>
-      </th>
+      </td>
+
+      <% if t.image_url.present? %>
+        <td style="color:#0a0a0a;line-height:1.3;margin:0;padding:0 16px 8px 8px;text-align:right;width:20%" align="right">
+          <img src="<%= Discourse.base_url_no_prefix + t.image_url -%>" style="-ms-interpolation-mode:bicubic;margin:auto;max-height:64px;max-width:100%;outline:0;text-align:right;text-decoration:none;">
+        </td>
+      <% end %>
+
     </tr>
   </tbody>
 </table>
@@ -132,15 +134,15 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <table style="padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
   <tbody>
     <tr>
-      <th style="color:#0a0a0a;line-height:1.3;margin:0 auto;padding:0 8px 0 16px;width:60px;">
+      <td style="color:#0a0a0a;line-height:1.3;margin:0 auto;padding:0 8px 0 16px;width:60px;">
         <img src="<%= t.user.small_avatar_url -%>" style="-ms-interpolation-mode:bicubic;border-radius:50%;clear:both;display:block;float:none;height:50px;width:50px;margin:0;max-width:100%;outline:0;text-align:center;text-decoration:none;" align="center">
-      </th>
-      <th style="color:#0a0a0a;padding:0 16px 0 8px;text-align:left;">
+      </td>
+      <td style="color:#0a0a0a;padding:0 16px 0 8px;text-align:left;">
         <h6 style="color:inherit;font-size:18px;font-weight:400;line-height:1.3;margin:0;padding:0;word-wrap:normal;"><%= t.user.try(:username) -%></h6>
         <% if t.user.try(:name).present? %>
           <p style="color:#8f8f8f;line-height:1.3;margin:0 0 16px 0;padding:0;"><%= t.user.name -%></p>
         <% end %>
-      </th>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -149,11 +151,11 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <table style="border-bottom:1px solid #f3f3f3;padding:0;text-align:left;vertical-align:top;width:100%">
   <tbody>
     <tr>
-      <th style="padding:0 16px 16px 16px;text-align:left;width:100%;font-weight:normal;">
+      <td style="padding:0 16px 16px 16px;text-align:left;width:100%;font-weight:normal;">
         <p style="color:#0a0a0a;line-height:1.3;margin:0 0 10px 0;padding:0;font-weight:200;">
           <%= email_excerpt(t.first_post.cooked) %>
         </p>
-      </th>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -162,26 +164,26 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <table style="padding:0;text-align:left;vertical-align:top;width:100%; margin-top:20px;">
   <tbody>
     <tr style="vertical-align:top;">
-      <th style="padding:0 8px 16px 16px;text-align:left;white-space: nowrap;vertical-align: top;">
+      <td style="padding:0 8px 16px 16px;text-align:left;white-space: nowrap;vertical-align: top;">
         <img src="<%= email_image_url 'heart.png' -%>" style="-ms-interpolation-mode:bicubic;clear:both;display:inline-block;float:left;height:20px;margin:0;max-width:100%;opacity:.4;outline:0;text-decoration:none;width:auto">
-        <p style="color:#8f8f8f;float:left;line-height:1.3;margin:0 5px 10px 5px;padding:0;text-align:left"><%= t.like_count -%></p>
-      </th>
-      <th style="padding:0 8px 16px 8px;text-align:left;white-space: nowrap;vertical-align: top;">
+        <p style="color:#8f8f8f;float:left;line-height:1.3;margin:0 5px 10px 5px;padding:0;text-align:left;font-weight:400;"><%= t.like_count -%></p>
+      </td>
+      <td style="padding:0 8px 16px 8px;text-align:left;white-space: nowrap;vertical-align: top;">
         <img src="<%= email_image_url 'comment.png' -%>" style="-ms-interpolation-mode:bicubic;clear:none;display:inline-block;float:left;height:20px;margin:0;max-width:100%;opacity:.4;outline:0;text-decoration:none;width:auto">
-        <p style="color:#8f8f8f;float:left;line-height:1.3;margin:0 5px 10px 5px;padding:0;text-align:left"><%= t.posts_count - 1 -%></p>
-      </th>
-      <th style="padding:0 8px 16px 8px;text-align:left;white-space: nowrap;vertical-align: top;">
+        <p style="color:#8f8f8f;float:left;line-height:1.3;margin:0 5px 10px 5px;padding:0;text-align:left;font-weight:400;"><%= t.posts_count - 1 -%></p>
+      </td>
+      <td style="padding:0 8px 16px 8px;text-align:left;white-space: nowrap;vertical-align: top;">
         <% t.posters_summary.each do |ps| %>
           <% if ps.user %>
             <img src="<%= ps.user.small_avatar_url -%>" style="-ms-interpolation-mode:bicubic;border-radius:50%;clear:both;display:inline-block;height:20px;width:20px;outline:0;text-decoration:none;">
           <% end %>
         <% end %>
-      </th>
-      <th style="line-height:1.3;padding:0 16px 0 8px;text-align:right;white-space: nowrap;vertical-align: top;">
+      </td>
+      <td style="line-height:1.3;padding:0 16px 0 8px;text-align:right;white-space: nowrap;vertical-align: top;">
         <a href="<%= Discourse.base_url_no_prefix + t.relative_url %>" style="width:100%;background-color:#2199e8;color:#fff;text-decoration:none;padding:8px 16px;white-space: nowrap;">
           <%=t 'user_notifications.digest.join_the_discussion' %>
         </a>
-      </th>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -259,14 +261,14 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <table style="background-color:#f3f3f3;padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
   <tbody>
     <tr>
-      <th style="padding:0 8px 8px 8px;text-align:left;width:60px;vertical-align:top;">
+      <td style="padding:0 8px 8px 8px;text-align:left;width:60px;vertical-align:top;">
         <img src="<%= post.user.small_avatar_url -%>" style="-ms-interpolation-mode:bicubic;border-radius:50%;clear:both;display:block;height:50px;width:50px;outline:0;">
-      </th>
-      <th style="color:#0a0a0a;line-height:1.3;padding:0 8px 8px 8px;text-align:left;">
+      </td>
+      <td style="color:#0a0a0a;line-height:1.3;padding:0 8px 8px 8px;text-align:left;">
         <h6 style="color:inherit;font-size:16px;font-weight:400;margin:0;padding:0;text-align:left;word-wrap:normal;"><%= post.user.username -%></h6>
         <p style="color:#8f8f8f;font-size:16px;line-height:1.3;margin:0;padding:0;text-align:left;"><%= post.user.name -%></p>
-      </th>
-      <th style="color:#0a0a0a;line-height:1.3;padding:0 8px 8px 8px;text-align:right;">
+      </td>
+      <td style="color:#0a0a0a;line-height:1.3;padding:0 8px 8px 8px;text-align:right;">
         <p style="color:#8f8f8f;line-height:1.3;margin:0 0 10px 0;padding:0;text-align:right;">
           <%=t 'user_notifications.digest.from_topic_label' %>
           <a href="<%= post.full_url -%>" style="color:#2199e8;font-weight:400;line-height:1.3;margin:0;padding:0;text-align:left;text-decoration:none"><%= post.topic.title -%></a>
@@ -274,7 +276,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
         <a href="<%= post.full_url -%>" style="width:100%;background-color:#2199e8;color:#fff;text-decoration:none;padding:8px 16px;white-space: nowrap;">
           <%=t 'user_notifications.digest.join_the_discussion' %>
         </a>
-      </th>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -327,11 +329,11 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
       </td>
       <td style="padding:24px 8px 16px 8px;text-align:left;">
         <img src="<%= email_image_url 'heart.png' -%>" style="-ms-interpolation-mode:bicubic;clear:both;display:inline-block;float:left;height:20px;margin:0;max-width:100%;opacity:.4;outline:0;text-decoration:none;width:auto">
-        <p style="color:#8f8f8f;float:left;line-height:1.3;margin:0 5px 10px 5px;padding:0;text-align:left"><%= t.like_count -%></p>
+        <p style="color:#8f8f8f;float:left;line-height:1.3;margin:0 5px 10px 5px;padding:0;text-align:left;font-weight:400;"><%= t.like_count -%></p>
       </td>
       <td style="padding:24px 16px 16px 8px;text-align:left;">
         <img src="<%= email_image_url 'comment.png' -%>" style="-ms-interpolation-mode:bicubic;clear:none;display:inline-block;float:left;height:20px;margin:0;max-width:100%;opacity:.4;outline:0;text-decoration:none;width:auto">
-        <p style="color:#8f8f8f;float:left;line-height:1.3;margin:0 5px 10px 5px;padding:0;text-align:left"><%= t.posts_count - 1 -%></p>
+        <p style="color:#8f8f8f;float:left;line-height:1.3;margin:0 5px 10px 5px;padding:0;text-align:left;font-weight:400;"><%= t.posts_count - 1 -%></p>
       </td>
     </tr>
 
