new text version of digest

--- a/app/views/user_notifications/digest.html.erb
+++ b/app/views/user_notifications/digest.html.erb
@@ -308,7 +308,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <!--   Begin new topic  -->
     <tr style="vertical-align:top;">
       <td style="padding:20px 8px 0 16px;text-align:left;">
-        <p style="background:#2F70AC;border-radius:50%;color:#fff;height:30px;line-height:30px;margin:0 0 10px 0;padding:0;text-align:center;width:30px">
+        <p style="background:#2F70AC;border-radius:50%;color:#fff;height:30px;line-height:30px;margin:0 0 10px 0;padding:0;text-align:center;width:30px;font-weight: 400;">
           <%= t.user_data ? (t.highest_post_number - t.user_data.last_read_post_number) : t.highest_post_number %>
         </p>
       </td>
@@ -389,117 +389,6 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
     table.body .columns .columns {
       padding-left: 0!important;
       padding-right: 0!important
-    }
-    td.small-1,
-    th.small-1 {
-      display: inline-block!important;
-      width: 8.33333%!important
-    }
-    td.small-2,
-    th.small-2 {
-      display: inline-block!important;
-      width: 16.66667%!important
-    }
-    td.small-3,
-    th.small-3 {
-      display: inline-block!important;
-      width: 25%!important
-    }
-    td.small-4,
-    th.small-4 {
-      display: inline-block!important;
-      width: 33.33333%!important
-    }
-    td.small-5,
-    th.small-5 {
-      display: inline-block!important;
-      width: 41.66667%!important
-    }
-    td.small-6,
-    th.small-6 {
-      display: inline-block!important;
-      width: 50%!important
-    }
-    td.small-7,
-    th.small-7 {
-      display: inline-block!important;
-      width: 58.33333%!important
-    }
-    td.small-8,
-    th.small-8 {
-      display: inline-block!important;
-      width: 66.66667%!important
-    }
-    td.small-9,
-    th.small-9 {
-      display: inline-block!important;
-      width: 75%!important
-    }
-    td.small-10,
-    th.small-10 {
-      display: inline-block!important;
-      width: 83.33333%!important
-    }
-    td.small-11,
-    th.small-11 {
-      display: inline-block!important;
-      width: 91.66667%!important
-    }
-    td.small-12,
-    th.small-12 {
-      display: inline-block!important;
-      width: 100%!important
-    }
-    .column td.small-12,
-    .column th.small-12,
-    .columns td.small-12,
-    .columns th.small-12 {
-      display: block!important;
-      width: 100%!important
-    }
-    table.body td.small-offset-1,
-    table.body th.small-offset-1 {
-      margin-left: 8.33333%!important;
-    }
-    table.body td.small-offset-2,
-    table.body th.small-offset-2 {
-      margin-left: 16.66667%!important;
-    }
-    table.body td.small-offset-3,
-    table.body th.small-offset-3 {
-      margin-left: 25%!important;
-    }
-    table.body td.small-offset-4,
-    table.body th.small-offset-4 {
-      margin-left: 33.33333%!important;
-    }
-    table.body td.small-offset-5,
-    table.body th.small-offset-5 {
-      margin-left: 41.66667%!important;
-    }
-    table.body td.small-offset-6,
-    table.body th.small-offset-6 {
-      margin-left: 50%!important;
-    }
-    table.body td.small-offset-7,
-    table.body th.small-offset-7 {
-      margin-left: 58.33333%!important;
-    }
-    table.body td.small-offset-8,
-    table.body th.small-offset-8 {
-      margin-left: 66.66667%!important;
-    }
-    table.body td.small-offset-9,
-    table.body th.small-offset-9 {
-      margin-left: 75%!important;
-    }
-    table.body td.small-offset-10,
-    table.body th.small-offset-10 {
-      margin-left: 83.33333%!important;
-    }
-    table.body td.small-offset-11,
-    table.body th.small-offset-11 {
-      margin-left: 91.66667%!important;
     }
   }
 </style>
