--- a/app/views/user_notifications/digest.html.erb
+++ b/app/views/user_notifications/digest.html.erb
@@ -223,7 +223,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <table style="background-color: #f3f3f3; width: 100%;">
   <tr>
     <td>
-      <h1 style="font-size:34px;font-weight:400;line-height:1.3; padding: 30px 0 10px 0;text-align:center;">
+      <h1 style="color:#0a0a0a;font-size:34px;font-weight:400;line-height:1.3; padding: 30px 0 10px 0;text-align:center;">
         <%=t 'user_notifications.digest.popular_posts' %>
       </h1>
     </td>
@@ -295,7 +295,7 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 
 
 <% if @other_new_for_you.present? %>
-  <center style="font-size:34px;font-weight:400;margin-bottom: 8px;"><%=t 'user_notifications.digest.more_new' %></center>
+  <center style="color:#0a0a0a;font-size:34px;font-weight:400;margin-bottom: 8px;"><%=t 'user_notifications.digest.more_new' %></center>
 
 
 <%= digest_custom_html("above_popular_topics") %>
